# Ai_stock

./: .gitignore  LICENSE  README.md  ai_analyzer.py  automation.py  check_db.py  config.py.example  data_enhancer.py  data_fetcher.py  mail_sender.py  main.py  preview_iphone12.html  pyproject.toml  requirements.txt  strategy_engine.py  test_alt_sources.py  test_fallback.py  test_kline.py  test_kline_v2.py  test_preview.py  test_sector.py
.workbuddy/automations/ai-5/: memory.md
PyCharmMiscProject/Aoeo/testcases/: settlementTransactions.py
WorkBuddy/2026-05-08-task-5/AInvest/: README.md
WorkBuddy/2026-05-08-task-5/AInvest/src/agents/: data_agent.py  report_agent.py
WorkBuddy/2026-05-08-task-5/AInvest/src/data/: source.py
WorkBuddy/2026-05-08-task-5/AInvest/src/reports/: email_sender.py
configs/: settings.yaml
src/: __init__.py
src/agents/: __init__.py  data_agent.py  market_agent.py  report_agent.py  strategy_agent.py
src/cli/: __init__.py  interactive.py  main.py
src/core/: __init__.py  config.py  engine.py  indicators.py  types.py
src/data/: __init__.py  fetcher.py  kline_fetcher.py  source.py
src/reports/: __init__.py  email_sender.py  formatter.py  generator.py
src/reports/templates/: __init__.py  report_template.py
src/strategies/: __init__.py  base.py  composite_strategy.py  registry.py  strategy_type.py
src/strategies/momentum/: multi_factor.py  turnover_rank.py  volume_surge.py
src/strategies/technical/: ai_technical.py  institution.py
tests/unit/: test_config.py  test_strategies.py  test_types.py
(+6 files in other folders)
